handle provider table

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -211,12 +211,87 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyspark\n",
+      "  Using cached pyspark-3.5.3-py2.py3-none-any.whl\n",
+      "Collecting py4j==0.10.9.7 (from pyspark)\n",
+      "  Obtaining dependency information for py4j==0.10.9.7 from https://files.pythonhosted.org/packages/10/30/a58b32568f1623aaad7db22aa9eafc4c6c194b429ff35bdc55ca2726da47/py4j-0.10.9.7-py2.py3-none-any.whl.metadata\n",
+      "  Using cached py4j-0.10.9.7-py2.py3-none-any.whl.metadata (1.5 kB)\n",
+      "Using cached py4j-0.10.9.7-py2.py3-none-any.whl (200 kB)\n",
+      "Installing collected packages: py4j, pyspark\n",
+      "Successfully installed py4j-0.10.9.7 pyspark-3.5.3\n",
+      "+--------------------+----------------------+-----------+---------------------+\n",
+      "|specialty_concept_id|specialty_source_value|provider_id|provider_source_value|\n",
+      "+--------------------+----------------------+-----------+---------------------+\n",
+      "|                  50|            Pharmacien|          0|                    0|\n",
+      "|                  26|      Kinésithérapeute|          1|                    1|\n",
+      "|                   1|   Médecin généraliste|          2|                    2|\n",
+      "|                   6|            Radiologue|          3|                    3|\n",
+      "+--------------------+----------------------+-----------+---------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyspark\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
+    "from pyspark.sql.functions import monotonically_increasing_id, lit\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark import SparkConf\n",
+    "\n",
+    "# Initialize SparkSession\n",
+    "conf = SparkConf().set(\"spark.hadoop.fs.file.impl\", \"org.apache.hadoop.fs.LocalFileSystem\")\n",
+    "spark = SparkSession.builder.config(conf=conf).getOrCreate()\n",
+    "# Read CSV file into PySpark DataFrame\n",
+    "df1 = spark.read.csv(\"./ir_act_v.csv\", header=True, inferSchema=True)\n",
+    "df2 = spark.read.csv(\"./ir_spe_v.csv\", header=True, inferSchema=True)\n",
+    "# Process the DataFrame\n",
+    "df1 = df1.withColumnRenamed(\"pfs_act_nat\", \"specialty_concept_id\") \\\n",
+    "       .withColumnRenamed(\"label\", \"specialty_source_value\")\n",
+    "\n",
+    "df2 = df2.withColumnRenamed(\"pfs_spe_cod\", \"specialty_concept_id\") \\\n",
+    "       .withColumnRenamed(\"label\", \"specialty_source_value\")\n",
+    "\n",
+    "merged_df = df1.union(df2)\n",
+    "merged_df = merged_df.distinct()\n",
+    "merged_df = merged_df.withColumn(\"provider_id\", monotonically_increasing_id())\n",
+    "merged_df = merged_df.withColumn(\"provider_id\", merged_df[\"provider_id\"].cast(\"int\"))\n",
+    "#I didnt find any information about provider_source_value so i decided to use the provider_id as a provider_source_value \n",
+    "merged_df = merged_df.withColumn(\"provider_source_value\", merged_df[\"provider_id\"].cast(\"string\"))\n",
+    "\n",
+    "#merged_df.write.parquet(\"./provider.parquet\")\n",
+    "merged_df.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-16T11:19:31.540448Z",
+     "start_time": "2024-11-16T11:18:41.486001Z"
+    }
+   },
+   "id": "37c67b32f8e594e3",
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "37c67b32f8e594e3"
+   "id": "2a658f2d44ff5d06"
   }
  ],
  "metadata": {
